# web-mapplot

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_multi_colorbars.py
examples/: comprehensive_demo.py  example_advanced_features.py  example_all_plot_types.py  example_auto_refresh.py  example_basemap_selection.py  example_basic.py  example_collapsible_panels.py  example_custom_range.py  example_heatmap.py  example_hexbin.py  example_isosurface.py  example_layer_overlay.py  example_multiple_variables.py  example_projections.py  example_smooth_interpolation.py  example_timeseries.py  example_vector_field.py  example_vector_scale.py  example_voronoi.py  example_webserver.py
templates/: map_template.html
web_mapplot/: __init__.py  mapplot.py  server.py
web_mapplot/templates/: map_template.html
