[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "web-mapplot"
version = "2.0.0"
description = "Interactive web-based geographical visualizations with advanced features"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Web MapPlot Contributors"}
]
keywords = [
    "visualization",
    "maps",
    "geospatial",
    "plotting",
    "contour",
    "vector-field",
    "heatmap",
    "leaflet",
    "interactive",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/web-mapplot"
Documentation = "https://github.com/yourusername/web-mapplot#readme"
Repository = "https://github.com/yourusername/web-mapplot"
Issues = "https://github.com/yourusername/web-mapplot/issues"

[tool.setuptools]
packages = ["web_mapplot"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html"]
